# geocell

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
src/geocell/: __init__.py  _version.py
src/geocell/_cython/: __init__.py
src/geocell/_cython/h3/: __init__.py  h3_api.pxd  indexing.pyi  indexing.pyx  indexing_vec.pyi  indexing_vec.pyx
src/geocell/api/: __init__.py
src/geocell/api/h3/: __init__.py  indexing.py  indexing.pyi
tests/h3/: __init__.py  conftest.py
tests/h3-test/: README.md  test_indexing.py
