[project]
name = "geocell"
version = "0.1.0"
description = "GEOCELL is a modular geospatial indexing framework that unifies Tile, QuadKey, H3, and S2 under a single high-performance API."
authors = [{ name = "tenacke", email = "emrekilic1010@gmail.com" }]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.3.5", "pandas>=2.3.3", "geopandas>=1.1.0"]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "h3>=4.0.0", "numpy>=2.3.5"]

[build-system]
requires = ["scikit-build-core>=0.10.0", "cython>=3.0.0", "numpy>=2.3.5"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/geocell"]
editable.mode = "redirect"
install.components = ["python"]

[tool.scikit-build.cmake]
build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
pythonpath = ["."]
